final responsive push for today

--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -21,3 +21,12 @@
     }
 
 } 
+
+@media(min-width:1500px){
+    .Project1{
+        font-size:1.5rem;
+    }
+    .Project2{
+            font-size:1.5rem;
+    }
+}
